[gd_scene load_steps=18 format=3 uid="uid://c9d8e7f6g5h4"]

[ext_resource type="Script" path="res://scripts/NeighborhoodMenu.gd" id="1_barrio"]
[ext_resource type="Texture2D" path="res://assets/images/backgrounds/barrio.png" id="2_neighborhood"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.8, 0.2, 0.2, 0.9)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.4, 0.4, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.9, 0.3, 0.3, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.5, 0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.7, 0.15, 0.15, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.9, 0.3, 0.3, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.2, 0.8, 0.2, 0.9)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 1, 0.4, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5"]
bg_color = Color(0.3, 0.9, 0.3, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 1, 0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6"]
bg_color = Color(0.15, 0.7, 0.15, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.9, 0.3, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7"]
bg_color = Color(0.2, 0.2, 0.8, 0.9)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8"]
bg_color = Color(0.3, 0.3, 0.9, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.5, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_9"]
bg_color = Color(0.15, 0.15, 0.7, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.9, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_10"]
bg_color = Color(0.8, 0.6, 0.2, 0.9)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.8, 0.4, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11"]
bg_color = Color(0.9, 0.7, 0.3, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.9, 0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12"]
bg_color = Color(0.7, 0.5, 0.15, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.7, 0.3, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13"]
bg_color = Color(0.4, 0.4, 0.4, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14"]
bg_color = Color(0.5, 0.3, 0.3, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.5, 0.5, 1)

[node name="NeighborhoodMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_barrio")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_neighborhood")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.3, 0.1, 0.0, 0.7)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "EL BARRIO"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 72
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3

[node name="MainButtonContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="FichajesButton" type="Button" parent="MarginContainer/VBoxContainer/MainButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_minimum_size = Vector2(400, 140)
text = "FICHAJES"
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")

[node name="SecondaryButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 20

[node name="FirstRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SecondaryButtons"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="EncyclopediaButton" type="Button" parent="MarginContainer/VBoxContainer/SecondaryButtons/FirstRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(350, 100)
text = "ENCICLOPEDIA DE JUGADORES"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4")
theme_override_styles/hover = SubResource("StyleBoxFlat_5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6")

[node name="ShopButton" type="Button" parent="MarginContainer/VBoxContainer/SecondaryButtons/FirstRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(350, 100)
text = "TIENDA DE SUPLEMENTOS"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_7")
theme_override_styles/hover = SubResource("StyleBoxFlat_8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_9")

[node name="SecondRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SecondaryButtons"]
layout_mode = 2
alignment = 1

[node name="TransferMarketButton" type="Button" parent="MarginContainer/VBoxContainer/SecondaryButtons/SecondRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(750, 100)
text = "MERCADO DE TRASPASOS"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_10")
theme_override_styles/hover = SubResource("StyleBoxFlat_11")
theme_override_styles/pressed = SubResource("StyleBoxFlat_12")

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
custom_minimum_size = Vector2(300, 60)
text = "Volver al Men√∫ Principal"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_13")
theme_override_styles/hover = SubResource("StyleBoxFlat_14")
